hphp/test/slow/unstable_features/default_disable_unstable_features.php.expectf
Fatal error: Cannot enable unstable feature: 'class_level_where' is unstable and unstable features are disabled in %s on line 6
